# RtmpDemo

./: .gitignore  README.md  build.gradle  build_rtmp.sh  build_rtmp_64.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/liuxin/rtmpdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseRtmp.cpp  BaseRtmp.h  RtmpFile.cpp  RtmpFile.h  RtmpLive.cpp  RtmpLive.h  constant.h  main.cpp  mylog.h
app/src/main/java/com/liuxin/rtmpdemo/: MainActivity.java
app/src/main/java/com/yunovo/rtmppush/: RtmpPush.java  TaskManager.java
app/src/main/java/com/yunovo/rtmppush/filepush/: FilePush.java
app/src/main/java/com/yunovo/rtmppush/livepush/: AudioCodec.java  ICodec.java  LivePush.java  RTMPPackage.java  VideoCodec.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/liuxin/rtmpdemo/: ConfigXmlTest.java  ExampleUnitTest.java  ZenConstant.java
config/: config.gradle  javadoc.gradle
config/keystore/mtk6735/: debug.keystore
script/: javadocUtils.gradle  utils.gradle
